@@ -1,3 +1,7 @@
+2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* server-src/dumper.c (process_dumpline): debug once error to write to
+	  the state file
+
 2017-11-14  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/conffile.c: Do not allow double quote in section name or
 	  label
